<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <CheckBox
        android:id="@+id/favorited"
        android:layout_width="wrap_content"
        android:layout_height="?android:attr/windowTitleSize"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dip"
        android:button="@drawable/star_check"
        tools:gravity="left|center_vertical" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/lang_from"
        android:layout_toRightOf="@+id/favorited"
        android:orientation="vertical">

        <TextView
            android:id="@+id/word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/hint_word"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <TextView
            android:id="@+id/translation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/translation_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </LinearLayout>

    <TextView
        android:id="@+id/lang_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/arrow"
        android:text="@string/lang_en"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/lang_to"
        android:contentDescription="@string/blind_translate_arrow"
        app:srcCompat="@drawable/ic_action_one_side" />

    <TextView
        android:id="@+id/lang_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:gravity="right|center_vertical"
        android:text="@string/lang_ru"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
</RelativeLayout>