<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kalinasoft.yantrans.TranslateFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <Spinner
            android:id="@+id/left_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/action_swap"
            android:entries="@array/langs_default" />

        <ImageView
            android:id="@+id/action_swap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/action_swap"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            app:srcCompat="@drawable/ic_action_leftright" />

        <Spinner
            android:id="@+id/right_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/action_swap"
            android:entries="@array/langs_default" />

    </RelativeLayout>

    <EditText
        android:id="@+id/input_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|left"
        android:hint="@string/hint_word"
        android:inputType="text"
        android:maxHeight="185dp"
        android:minHeight="179dp"
        android:textAlignment="textStart"
        android:layout_weight="0.49" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/translation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:freezesText="true"
                    android:minHeight="185dp"
                    android:text="@string/here_be_translation"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
            </LinearLayout>
        </ScrollView>

        <CheckBox
            android:id="@+id/action_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:button="@drawable/star_check" />
    </FrameLayout>

    <TextView
        android:id="@+id/yandex_copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c_by_yandex" />
</LinearLayout>
